--- a/index 1.css
+++ b/index 1.css
@@ -1,7 +1,7 @@
  body{
             border:4px solid  #2ac50a;
             padding:20px;
-            background-image: url("../istockphoto-847042842-1024x1024.jpg" );
+            background-image: url("istockphoto-847042842-1024x1024.jpg" );
             background-repeat:repeat;
         }
             .main{
